--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -9,7 +9,7 @@ hero:
     file: ../../assets/splash.webp
   actions:
     - text: Get started
-      link: /overview/
+      link: overview/
       icon: right-arrow
       variant: primary
     - text: View on Github
